correct align

--- a/styles/style.css
+++ b/styles/style.css
@@ -46,6 +46,10 @@ body {
     height: 850px;
     background: rgba(229, 84, 115, 0.10);
 }
+.banner{
+    display: flex;
+    justify-content: center;
+}
 
 .banner-title {
     color: #272727;
@@ -88,6 +92,7 @@ body {
     align-items: center;
     margin: 0 240px;
     flex-shrink: 0;
+    gap: 20px;
 }
 
 .featured-flower-1 {
@@ -189,6 +194,8 @@ body {
     gap: 24px;
     margin-top: 48px;
     margin-bottom: 128px;
+    align-items: center;
+    justify-content: center;
 }
 
 .insta-desc {
